ExtensionContent/css/style.css
/*
File-Name: style.css
Description: Includes all the styling code of UI. 
*/

html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr,
acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong,
sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table,
caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption,
footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video
{
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}

body
{
    font-family: sans-serif;
    color: #0B333C;
    overflow: hidden;
}

*
{
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: -moz-none;
    -o-user-select: none;
    user-select: none;
}

.container
{
    Height: 490px;
    Width: 222px;
    background-color: #E8E8E8;
	margin: 0 auto;
    border: 1px solid #B7BABC;
}

#dvLoginContainer
{
    border: 1px solid #3199F6;
    Height: 360px;
    Width: 210px;
    margin: 5px;
}

    #dvLoginContainer .button
    {
        width: 188px;
    }

.logo
{
    background: url(../Images/SpecctrLogo_regpanel.png);
    margin: 25px 40px;
    height: 39px;
    background-repeat: no-repeat;
}

.row
{
    margin: 8px;
    margin-top: 20px;
}

    .row label
    {
        font-weight: bold;
        font-family: sans-serif;
        font-size: 13px;
        color: #4B4B4B;
    }

input[type="text"], input[type="password"]
{
    border: 1px solid #C9CBCC !important;
    padding: 2px;
    border-top: 1px solid #6D6F70 !important;
    width: 187px;
    -webkit-user-select: auto;
}

.menu
{
    width: 190px;
    margin: 0 auto;
}

    .menu li
    {
        list-style-type: none;
        width: 190px;
        text-align: center;
        font-family: sans-serif;
        font-size: 13px;
        font-weight: bold;
    }

.border
{
    border-top: 1px solid #C9CBCC;
    border-bottom: 1px solid #6D6F70;
    background-image: linear-gradient(#C9CBCC, #6D6F70), linear-gradient(#C9CBCC, #6D6F70);
    background-size: 1px 100%;
    background-position: 0 0, 100% 0;
    background-repeat: no-repeat;
}

.border:hover
{
    border: 1px solid red;
    background-image: none;
}

.button
{
    padding-top: 10px;
    padding-bottom: 10px;
    background-image: linear-gradient(to top, #E1E1E1 0%, #F8F8F8 100%);
    width: 198px;
    margin: 0 auto;
    cursor: pointer;
}

.button2
{
    padding-top: 10px;
    padding-bottom: 10px;
    background-color: #FFF;
    background-image: none;
    width: 186px;
    margin: 0 auto;
    cursor: pointer;
}

    .button label, .button2 label
    {
        cursor: pointer !important;
    }

#dvLoginContainer ul
{
    margin-top: 70px;
}

.link
{
    color: #3199F6;
    font-family: sans-serif;
    font-size: 13px;
    cursor: pointer;
}

.help
{
    text-align: center;
    padding: 20px;
}

.tabs
{
    height: 40px;
}

    .tabs > ul
    {
        font-size: 1em;
        list-style: none;
    }

        .tabs > ul > li
        {
            background-image: linear-gradient(to top, #B5B2B2 0%, #e1e1e1 100%);
            text-align: center;
            float: left;
            width: 54px;
            height: 38px;
            padding-top: 4px;
            border-left: 1px solid #B9B9B9;
            border-right: 1px solid #B9B9B9;
            border-top: 1px solid #B9B9B9;
            border-bottom: 2px solid #ABA9A9;
        }

    .tabs > ul > li:hover
    {
        background-image: linear-gradient(to top, #B5B2B2 0%, #e1e1e1 80%);
        cursor: pointer;
        border: none;
        border-right: 1px solid #3199F6;
        border-bottom: 2px solid #ABA9A9;
        border-top: 1px solid #3199F6;
        border-left: 1px solid #3199F6;
    }

    .tabs > ul > li.tabActiveHeader
    {
        border: none;
        background: #E8E8E8;
        cursor: pointer;
    }

#tabContainer
{
    border-top-left-radius: 2px;
    border-top-right-radius: 2px;
}

.tabscontent
{
    -moz-border-radius-topleft: 0px;
    -moz-border-radius-topright: 4px;
    -moz-border-radius-bottomright: 4px;
    -moz-border-radius-bottomleft: 4px;
    border-top-left-radius: 0px;
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
    border-bottom-left-radius: 4px;
    padding: 10px 10px 25px;
    background: #E8E8E8;
    color: #333;
    height: 414px;
}

.floatLeft
{
    float: left;
}

.floatRight
{
    float: right;
}

.tabPage2Content
{
    font-family: "Arial";
    font-size: 11px;
    width: 100px;
    height: 18px;
    padding-bottom: 2px;
}

.tabPage3Content
{
    font-family: "Arial";
    font-size: 11px;
    width: 180px;
}

.tabPageContentSubHeaderRow
{
    font-family: "Arial";
    font-size: 11px;
    width: 180px;
    padding-top: 10px;
    padding-bottom: 5px;
    height: 25px;
}

.tabPageContentRow
{
    display: table;
    font-family: "Arial";
    font-size: 11px;
    width: 180px;
    padding-top: 5px;
    padding-bottom: 5px;
    height: 25px;
}

.tabPageContentLeft
{
    font-family: "Arial";
    font-size: 11px;
    width: 80px;
    display: table-cell;
}

.tabPageContentRight
{
    font-family: "Arial";
    font-size: 11px;
    width: 100px;
    display: table-cell;
}

.tabPage2Header
{
    font-family: Arial Unicode MS;
    font-size: 13px;
    text-align: center;
    padding-bottom: 10px;
    padding-top: 10px;
}

.tabPage2SubHeader
{
    font-size: small;
    margin-bottom: 10px;
}

.boldText
{
    font-weight: bold;
}

.imgButton
{
    padding: 0px;
    height: 49px;
    display: table;
    text-align: left;
}

.imgButton img
{
    display: table-cell;
    float: left;
    width: 49px;
    margin-left: 15px;
}

.imgButton label
{
    display: table-cell;
    float: left;
    margin-left: 5px;
    margin-top: 15px;
    width: 100px;
    text-align: center;
}
/* ... */

